# run.sh

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  commands.json  commands.sh  compose.yml  taplo.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: config.yml  language_request.yml
.github/workflows/: deploy.yml
.sqlx/: query-0e95151bf455d0a09c29dd9a29d2e66d860d7ac699bb6f3dfd805b1a630a78c5.json  query-3d1ecc0a3057f72509a1ecea9159f6186dd54a7f5e7f61472f884cc3c24a5d91.json  query-421c540f60cee9a6f8361e70c92453669e28e841eef0dd46643fdfa19afec5b7.json  query-42b67fae6347fd82e2c8987336e616c44d232e334c1703c71b4868098a0d22da.json  query-6c16dab66f32e79caac5c691b32a065f4f0ae9a75358af0c56a7968fe0a265db.json  query-8d7ab559e352df38073f5da82d38751823defe74fc0773ce05e4ac964270f90e.json  query-a72d5ca79094219ba2c29abf7a631ab81f311bcd4c4bdb9ee7dced86fc885701.json
languages/: README.md
languages/haskell/: Dockerfile
languages/sql/: Dockerfile  run.sh
languages/typescript/: Dockerfile  run.sh
legal/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
migrations/: 20241005221957_execution.down.sql  20241005221957_execution.up.sql
scripts/: clean
src/: commands.rs  config.rs  events.rs  hypervisor.rs  lib.rs  main.rs  parsers.rs  state.rs
src/commands/: execute_code.rs  languages.rs
src/events/: interaction_create.rs  message_create.rs  message_update.rs  thread_create.rs
src/hypervisor/: exec_error.rs  languages.rs
