[package]
name = "run-sh"
version = "0.1.0"
edition = "2021"
authors = ["Carter Himmel <me@fyko.net>"]
license = "MIT OR Apache-2.0"
default-run = "run-sh"

[dependencies]
anyhow = "1.0.89"
docker-api = "0.14.0"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.31"
indoc = "2.0.5"
lazy_static = "1.5.0"
once_cell = "1.20.2"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "time"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "signal",
  "fs",
  "sync",
] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "fmt",
  "env-filter",
  "json",
] }
twilight-gateway = { version = "0.16.0-rc.1", default-features = false, features = [
  "rustls-webpki-roots",
  "twilight-http",
] }
twilight-http = { version = "0.16.0-rc.1", default-features = false, features = [
  "rustls-webpki-roots",
] }
twilight-model = "0.16.0-rc.1"
twilight-util = { version = "0.16.0-rc.1", features = ["builder"] }
# vesper = "0.13.0"
vesper = { git = "https://github.com/AlvaroMS25/vesper", branch = "next" }
libsystemd = { version = "0.7.0", optional = true }

[features]
systemd = ["dep:libsystemd"]
# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
